# Ambulance-Management-System

./: .gitignore  All requests fulfilled by SCars.txt  CMakeLists.txt  InputText.txt  InputText_2.txt  InputText_4.txt  InputText_5.txt  InputText_6.txt  InputText_7.txt  InputsText_3.txt  LICENSE.md  LinkedList.h  Multiple hospitals, mixed request types.txt  No requests, only cancellations.txt  Node.h  OutputFile.txt  README.md  Request overload, some missed.txt  Single hospital, all EP requests.txt  Stack.h  main.cpp  queue.h  scenario_1_multiple_hospitals_mixed_requests.txt  scenario_2_single_hospital_all_ep_requests.txt  scenario_3_all_requests_fulfilled_by_scars.txt  scenario_4_high_cancellation_rate.txt  scenario_5_request_overload.txt  scenario_6_no_requests_only_cancellations.txt
Includes/: Car.h  Decorators.h  Hospital.h  Logger.h  Organizer.h  ReadingHelper.h  Request.h  UI.h
data_structures/: LinkedList.cpp  LinkedList.h  Node.cpp  PatientQueue.cpp  PatientQueue.h  queue.h  synthetic_queue.cpp  synthetic_queue.h  synthetic_stack.cpp  synthetic_stack.h
ds/: LinkedList.h  LinkedQueue.h  Node.h  PriQueue.h  Stack.h  priQueue.h
src/: Car.cpp  Hospital.cpp  Logger.cpp  Organizer.cpp  ReadingHelper.cpp  Request.cpp  UI.cpp
